# parallel-image-detection

./: .gitignore  COMO_TESTAR_IMAGEM.md  LICENSE  PROGRESSO.md  README.md
cpp/: .gitignore  README.md
cpp/include/: tensor.h
cpp/src/: conv2d.cpp  main.cpp  maxpool.cpp
cpp_cuda/: CMakeLists.txt  CMakeLists.txt.backup  compile.bat
cpp_cuda/include/: cuda_utils.h  maxpool.h  tensor.h
cpp_cuda/include/gpu/: batchnorm_gpu.h  conv2d_gpu.h
cpp_cuda/src/: adaptiveavgpool.cpp  batchnorm.cpp  conv2d.cpp  linear.cpp  main.cpp  main.cpp.bak  main.cu  relu.cpp  tensor.cpp  tensor.cu
cpp_cuda/src/gpu/: batchnorm_gpu.cu  conv2d_gpu.cu
cpp_parallel/: CMakeLists.txt
cpp_parallel/include/: adaptiveavgpool.h  basicblock.h  batchnorm.h  conv2d.h  linear.h  relu.h
cpp_parallel/src/: basicblock.cpp  batchnorm.cpp  conv2d.cpp  linear.cpp  main.cpp  relu.cpp  tensor.cpp
docs/: implementation_guide.md  model.md  validate_tutorial.md
docs/gpu/: cuda_implementation_v1.md  cuda_optimization_plan.md  tensor_design_decision.md
docs/gpu/phase_1/: cuda_phase1_implementation.md  phase1_step3_complete.md  phase1_step4_complete.md  phase1_step5_complete.md  phases2_to_5_roadmap.md
src/model_extraction/: extract_buffers.py  model_extraction.py
src/validate_results/: benchmark.py  benchmark_parallel_vs_sequential.py  cpu_benchmark.csv  layer_performance_summary.csv  reference_model.py  results_benchmark.csv  run_tests.py  simple_layer_analysis.py  test_with_image.py  validate.py
src/validate_results/benchmark_inputs/: input_008_shape.txt
